<resources>
    <string name="app_name">Petroastur</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Petroastur</string>
    <string name="nav_header_subtitle">petroastur@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Listado de gasolineras</string>
    <string name="menu_gallery">Mapa</string>
    <string name="menu_slideshow">Estaciones favoritas</string>
    <string name="menu_tools">Ajustes</string>
    <string name="menu_share">Comparte</string>
    <string name="menu_send">Opinión</string>
    <string name="horario">Horario de apertura</string>

    <string name="tipo_combustible">Tipo de combustible preferido:</string>
    <string name="diesel">Biodiesel</string>
    <string name="gasolina_95">Gasolina 95</string>
    <string name="gasolina_98">Gasolina 98</string>
    <string name="bioetanol">Bioetanol</string>
    <string name="gasNaturalComprimido">Gas natural comprimido</string>
    <string name="gasNaturalLicuado">Gas natural licuado</string>
    <string name="gasesLicuadosDelPetroleo">Gases licuados del petroleo</string>
    <string name="gasoleoA">GasoleoA</string>
    <string name="gasoleoB">GasoleoB</string>
    <string name="nuevoGasoleoA">Nuevo gasoleo A</string>

    <string name="orden_listado">Ordenar listado por:</string>
    <string name="distancia">Distancia</string>
    <string name="precio">Precios de carburantes ofrecidos</string>

    <string name="distancia_maxima">Distancia máxima en km:</string>
    <string name="distancia_max_1">20</string>
    <string name="distancia_max_2">50</string>
    <string name="sin_maxima">Sin distancia máxima.</string>

    <!-->SETTINGS NAME<!-->
    <string name="SETTINGS_NAME_FILE">settingFile</string>
    <string name="SETTINGS_LAST_UPDATE">lastUpdate</string>
    <string name="SETTINGS_ID_FAVOURITE_ES">favouriteEs</string>
    <string name="SETTINGS_NAME_FAVOURITE_FUEL">favouriteFuel</string>
    <string name="SETTINGS_ORDER_LIST">orderList</string>
    <string name="SETTINGS_DISTANCE_MAX">maxDistance</string>


    <string name="nopermisos">Aviso: Permisos Desactivados</string>
    <string name="nopermisos2">Debe aceptar los permisos de localizacion para el correcto funcionamiento de la app.</string>
    <string name="precios">Precios:</string>
    <string name="mostrar_mapa">Mostrar en el mapa</string>
    <string name="añadir_favoritas">Añadir a favoritas</string>
    <string name="eliminar_favoritas">Eliminar de favoritas</string>

    <string name="opinion">DANOS TU OPINIÓN</string>
    <string name="enviar_opinion">Enviar</string>
    <string name="texto_spam">Comparte con tus amigos.\nLa mejor aplicación de gasolineras, ¡Petroastur!</string>
    <string name="elige_aplicacion">Elige aplicación:</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
