<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_bomba_de_gasolina"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_punto_relleno_de_marcador_de_posicion"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_favoritas"
            android:icon="@drawable/ic_estrella"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Comunicación">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send_opinion"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
</menu>
