<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_spam"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elige_aplicacion"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonTw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/twitter" />

    <Button
        android:id="@+id/buttonFace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook" />

    <Button
        android:id="@+id/buttonWha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp" />
</LinearLayout>