<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nombreEstacion"
        android:layout_width="match_parent"
        android:layout_height="41dp" />

    <TextView
        android:id="@+id/direccion"
        android:layout_width="match_parent"
        android:layout_height="39dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/precio" />

    <EditText
        android:id="@+id/carburantes"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/mostrarMapaButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/mostrar_mapa" />

    <Button
        android:id="@+id/añadirFavoritas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/añadir_favoritas" />
</LinearLayout>